--- a/html/layout01.css
+++ b/html/layout01.css
@@ -13,11 +13,10 @@
     text-align: center;
 };
 
-.header {
-    background-color: #D9D9D9;
-    height: 100px;
+header  {   height: 100px;
     line-height: 100px;
-}
+};
+
 
 .content {
     background-color: #E6E6E6;
